IGNITE-29066 Add opts security.manager=allow (#13605)